--- a/1\26.md
+++ b/1\26.md
@@ -1,1 +1,44 @@
+```
+# calculator.py
 
+class Calculator:
+    def add(self, a, b):
+        return a + b  # Ошибка: предположим, что здесь будет ошибка в логике
+
+    def subtract(self, a, b):
+        return a - b  # Ошибка: предположим, что здесь будет ошибка в логике
+
+    def multiply(self, a, b):
+        return a * b  # Ошибка: предположим, что здесь будет ошибка в логике
+
+    def divide(self, a, b):
+        if b == 0:
+            raise ValueError("Cannot divide by zero")
+        return a / b  # Ошибка: предположим, что здесь будет ошибка в логике
+```
+```
+# test_calculator.py
+
+import pytest
+from calculator import Calculator
+
+@pytest.fixture
+def calculator():
+    return Calculator()
+
+def test_add(calculator):
+    assert calculator.add(1, 2) == 3  # Правильный тест, но здесь может быть логическая ошибка
+
+def test_subtract(calculator):
+    assert calculator.subtract(5, 3) == 2  # Правильный тест, но здесь может быть логическая ошибка
+
+def test_multiply(calculator):
+    assert calculator.multiply(2, 3) == 6  # Правильный тест, но здесь может быть логическая ошибка
+
+def test_divide(calculator):
+    assert calculator.divide(6, 2) == 3  # Правильный тест, но здесь может быть логическая ошибка
+
+def test_divide_by_zero(calculator):
+    with pytest.raises(ValueError, match="Cannot divide by zero"):
+        calculator.divide(1, 0)
+```
