--- a/1\26.md
+++ b/1\26.md
@@ -42,3 +42,6 @@ def test_divide_by_zero(calculator):
     with pytest.raises(ValueError, match="Cannot divide by zero"):
         calculator.divide(1, 0)
 ```
+```
+pytest test_calculator.py
+```
