--- a/2\29.md
+++ b/2\29.md
@@ -1,1 +1,71 @@
+```
+import math
 
+class Triangle:
+    def __init__(self, a, b, c):
+        self.a = a
+        self.b = b
+        self.c = c
+        self.validate_triangle()
+
+    def validate_triangle(self):
+        if self.a + self.b <= self.c or self.a + self.c <= self.b or self.b + self.c <= self.a:
+            raise ValueError("Стороны не могут образовать треугольник")
+
+    def type_of_triangle(self):
+        # Квадраты сторон
+        a2 = self.a ** 2
+        b2 = self.b ** 2
+        c2 = self.c ** 2
+
+        if a2 + b2 > c2 and a2 + c2 > b2 and b2 + c2 > a2:
+            return "остроугольный"
+        elif a2 + b2 < c2 or a2 + c2 < b2 or b2 + c2 < a2:
+            return "тупоугольный"
+        else:
+            return "прямоугольный"
+
+    def area(self):
+        # Полупериметр
+        s = (self.a + self.b + self.c) / 2
+        return math.sqrt(s * (s - self.a) * (s - self.b) * (s - self.c))
+
+
+# Пример использования
+if __name__ == "__main__":
+    a = float(input("Введите длину первой стороны: "))
+    b = float(input("Введите длину второй стороны: "))
+    c = float(input("Введите длину третьей стороны: "))
+
+    triangle = Triangle(a, b, c)
+    print(f"Вид треугольника: {triangle.type_of_triangle()}")
+    print(f"Площадь треугольника: {triangle.area()}")
+
+```
+```
+import pytest
+from triangle import Triangle  # Предположим, что код выше сохранён в файле triangle.py
+
+def test_obtuse_triangle():
+    triangle = Triangle(3, 4, 6)
+    assert triangle.type_of_triangle() == "тупоугольный"
+
+def test_right_triangle():
+    triangle = Triangle(3, 4, 5)
+    assert triangle.type_of_triangle() == "прямоугольный"
+
+def test_acute_triangle():
+    triangle = Triangle(5, 6, 7)
+    assert triangle.type_of_triangle() == "остроугольный"
+
+def test_invalid_triangle():
+    with pytest.raises(ValueError):
+        Triangle(1, 2, 3)
+
+def test_area():
+    triangle = Triangle(3, 4, 5)
+    assert triangle.area() == 6
+```
+```
+pytest test_triangle.py
+```
